Finding current location; plotting data points

--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,7 @@
   <body>
     <div id="map-canvas"></div>
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.12&key=AIzaSyDPq9h3wwq3U6xzBeVQPPA7h2CJamlU82s&sensor=true"></script>
+    <script type="text/javascript" src="../data/boulder.js"></script>
     <script type="text/javascript" src="map.js"></script>
   </body>
 </html>
