--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
     <link rel="stylesheet" type="text/css" href="main.css" />
+    <script type="text/javascript" src="phonegap.js"></script> 
+    <script type="text/javascript" src="zepto.js"></script>
+    <script type="text/javascript" src="map.js"></script>
   </head>
   <body>
     <div id="map-canvas"></div>
-    <script type="text/javascript" src="zepto.js"></script>
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.12&key=AIzaSyDPq9h3wwq3U6xzBeVQPPA7h2CJamlU82s&sensor=true"></script>
-    <script type="text/javascript" src="map.js"></script>
   </body>
 </html>
