images & custom icons for markers

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" type="text/css" href="main.css" />
     <script type="text/javascript" src="phonegap.js"></script> 
     <script type="text/javascript" src="zepto.js"></script>
+    <script type="text/javascript" src="icons.js"></script>
     <script type="text/javascript" src="map.js"></script>
   </head>
   <body>
