Trying to improve map on device

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <div data-role="page" id="map-window" data-theme="b">
       <div data-role="header" data-position="fixed" data-theme="b">
         <h1>Fruitdrop</h1>
-        <a href="#settings-window" data-transition="flip" data-role="button" class="ui-btn-right" data-icon="gear">Settings</a></div>
+        <a href="#settings-window" data-transition="flip" data-role="button" class="ui-btn-right" data-icon="gear">Settings</a>
+      </div>
       <div data-role="content" class="content">
         <div id="map-canvas"></div>
       </div>
