changing map dimensions for device

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div data-role="page" id="map-window" data-theme="b">
-      <div data-role="header" data-position="fixed" data-theme="b">
+      <div data-role="header" data-position="fixed" data-theme="b" class="header">
         <h1>Fruitdrop</h1>
         <a href="#settings-window" data-transition="flip" data-role="button" class="ui-btn-right" data-icon="gear">Settings</a>
       </div>
