more detailed info window popups

--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <link rel="stylesheet" type="text/css" href="main.css" />
     <script type="text/javascript" src="phonegap.js"></script> 
     <script type="text/javascript" src="zepto.js"></script>
+    <script type="text/javascript" src="D.min.js"></script>
+    <script type="text/javascript" src="settings.js"></script>
     <script type="text/javascript" src="icons.js"></script>
+    <script type="text/javascript" src="api.js"></script>
     <script type="text/javascript" src="map.js"></script>
   </head>
   <body>
